more poor clustering; created initial tf-idf features for supervised part

--- a/sguo/0_Preprocess.ipynb
+++ b/sguo/0_Preprocess.ipynb
@@ -427,7 +427,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../archive/en.openfoodfacts.org.products.tsv\", sep = \"\\t\")\n",
+    "df = pd.read_csv(\"../data/en.openfoodfacts.org.products.tsv\", sep = \"\\t\")\n",
     "for col in df:\n",
     "    if df[col].dtype == object:\n",
     "#         print(col)\n",
@@ -506,17 +506,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                   252728\n",
-      "Plant-based foods and beverages     31311\n",
-      "Plant-based foods                   26486\n",
-      "Beverages                           17096\n",
-      "Sugary snacks                       13743\n",
-      "                                    ...  \n",
-      "fr:Filets-de-lieu                       1\n",
-      "fr:Sauce-coco-curry                     1\n",
-      "fr:Mayonnaise-aux-oeufs                 1\n",
-      "ru:Крупа-рисовая                        1\n",
-      "fr:Viandes-de-chevreuil                 1\n",
+      "                                     252728\n",
+      "Plant-based foods and beverages       31311\n",
+      "Plant-based foods                     26486\n",
+      "Beverages                             17096\n",
+      "Sugary snacks                         13743\n",
+      "                                      ...  \n",
+      "fr:Tartines-craquantes-au-froment         1\n",
+      "it:Asti                                   1\n",
+      "fr:Chocolat-fourre-au-fruit               1\n",
+      "fr:Tajine-cuisine                         1\n",
+      "ru:Огурцы-малосольные                     1\n",
       "Length: 15933, dtype: int64\n"
      ]
     }
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -880,6 +880,29 @@
     "kept_nutr_vars = [\"energy_100g\",\"proteins_100g\",\"sodium_100g\",\\\n",
     "                  \"fat_100g\",\"carbohydrates_100g\",\"sugars_100g\",\"saturated-fat_100g\"]\n",
     "print(df_scaled[kept_nutr_vars].dropna().shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(7499, 5)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kept_nutr_vars = [\"sodium_100g\",\\\n",
+    "                  \"fat_100g\",\"carbohydrates_100g\"]\n",
+    "\n",
+    "df[df[\"main_category\"]==\"en:beverages\"][[\"main_category\",\"countries_en\"]+kept_nutr_vars].dropna().shape"
    ]
   },
   {
@@ -1011,7 +1034,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
