--- a/gabet/0_Preprocess.ipynb
+++ b/gabet/0_Preprocess.ipynb
@@ -2939,18 +2939,81 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Now let's do regression"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from xgboost import XGBRegressor\n",
+    "from sklearn.metrics import mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = our_dtm\n",
+    "y = sup_df['nutrition-score-fr_100g']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=69)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "XGBRegressor(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "             colsample_bynode=1, colsample_bytree=1, gamma=0, gpu_id=-1,\n",
+       "             importance_type='gain', interaction_constraints='',\n",
+       "             learning_rate=0.300000012, max_delta_step=0, max_depth=6,\n",
+       "             min_child_weight=1, missing=nan, monotone_constraints='()',\n",
+       "             n_estimators=100, n_jobs=0, num_parallel_tree=1, random_state=0,\n",
+       "             reg_alpha=0, reg_lambda=1, scale_pos_weight=1, subsample=1,\n",
+       "             tree_method='exact', validate_parameters=1, verbosity=None)"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = XGBRegressor()\n",
+    "model.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.199727093272825"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred = model.predict(X_test)\n",
+    "np.sqrt(mean_squared_error(y_test, y_pred))"
+   ]
   }
  ],
  "metadata": {
