adding tf-idf df

--- a/gabet/0_Preprocess.ipynb
+++ b/gabet/0_Preprocess.ipynb
@@ -1499,7 +1499,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### WE USE TD-IDF TO DEFINE WORD PREVELANCE BY CLUSTER "
+    "### WE USE TF-IDF TO DEFINE WORD PREVELANCE BY CLUSTER "
    ]
   },
   {
