--- a/mcchan3/Project.ipynb
+++ b/mcchan3/Project.ipynb
@@ -1146,46 +1146,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "On branch main\r\n",
-      "Your branch is up to date with 'origin/main'.\r\n",
-      "\r\n",
-      "Untracked files:\r\n",
-      "  (use \"git add <file>...\" to include in what will be committed)\r\n",
-      "\t\u001b[31m../.DS_Store\u001b[m\r\n",
-      "\t\u001b[31m.DS_Store\u001b[m\r\n",
-      "\t\u001b[31m.ipynb_checkpoints/Project-Copy1-checkpoint.ipynb\u001b[m\r\n",
-      "\t\u001b[31m0.png\u001b[m\r\n",
-      "\t\u001b[31m1.png\u001b[m\r\n",
-      "\t\u001b[31m2.png\u001b[m\r\n",
-      "\t\u001b[31m3.png\u001b[m\r\n",
-      "\t\u001b[31m4.png\u001b[m\r\n",
-      "\t\u001b[31m5.png\u001b[m\r\n",
-      "\t\u001b[31mProject-Copy1.ipynb\u001b[m\r\n",
-      "\t\u001b[31mSOMFiberProteinsFat.png\u001b[m\r\n",
-      "\t\u001b[31mSOMSFatCabohydrateSugars.png\u001b[m\r\n",
-      "\t\u001b[31mScreen Shot 2021-05-06 at 3.47.36 PM.png\u001b[m\r\n",
-      "\t\u001b[31mScreen Shot 2021-05-06 at 3.47.49 PM.png\u001b[m\r\n",
-      "\t\u001b[31mScreen Shot 2021-05-06 at 3.49.12 PM.png\u001b[m\r\n",
-      "\t\u001b[31mScreen Shot 2021-05-06 at 3.49.39 PM.png\u001b[m\r\n",
-      "\t\u001b[31mScreen Shot 2021-05-06 at 3.49.58 PM.png\u001b[m\r\n",
-      "\t\u001b[31mhclustFig.png\u001b[m\r\n",
-      "\t\u001b[31mhclustk5.png\u001b[m\r\n",
-      "\t\u001b[31mkmeans0.png\u001b[m\r\n",
-      "\t\u001b[31mkmeans1.png\u001b[m\r\n",
-      "\t\u001b[31mkmeans2.png\u001b[m\r\n",
-      "\t\u001b[31mkmeans3.png\u001b[m\r\n",
-      "\t\u001b[31mkmeans4.png\u001b[m\r\n",
-      "\t\u001b[31mkmeansElbow.png\u001b[m\r\n",
-      "\t\u001b[31mkmeansk5.png\u001b[m\r\n",
-      "\t\u001b[31mnodesDifference.png\u001b[m\r\n",
-      "\t\u001b[31mnodesFeature_0.png\u001b[m\r\n",
-      "\t\u001b[31mnodesFeature_1.png\u001b[m\r\n",
-      "\t\u001b[31mnodesFeature_2.png\u001b[m\r\n",
-      "\t\u001b[31mnodesFeature_3.png\u001b[m\r\n",
-      "\t\u001b[31mnodesFeature_4.png\u001b[m\r\n",
-      "\t\u001b[31mnodesFeature_5.png\u001b[m\r\n",
-      "\r\n",
-      "nothing added to commit but untracked files present (use \"git add\" to track)\r\n"
+      "On branch main\n",
+      "Your branch is up to date with 'origin/main'.\n",
+      "\n",
+      "Untracked files:\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\n",
+      "\t\u001b[31m../.DS_Store\u001b[m\n",
+      "\t\u001b[31m.DS_Store\u001b[m\n",
+      "\t\u001b[31m.ipynb_checkpoints/Project-Copy1-checkpoint.ipynb\u001b[m\n",
+      "\t\u001b[31m0.png\u001b[m\n",
+      "\t\u001b[31m1.png\u001b[m\n",
+      "\t\u001b[31m2.png\u001b[m\n",
+      "\t\u001b[31m3.png\u001b[m\n",
+      "\t\u001b[31m4.png\u001b[m\n",
+      "\t\u001b[31m5.png\u001b[m\n",
+      "\t\u001b[31mProject-Copy1.ipynb\u001b[m\n",
+      "\t\u001b[31mSOMFiberProteinsFat.png\u001b[m\n",
+      "\t\u001b[31mSOMSFatCabohydrateSugars.png\u001b[m\n",
+      "\t\u001b[31mScreen Shot 2021-05-06 at 3.47.36 PM.png\u001b[m\n",
+      "\t\u001b[31mScreen Shot 2021-05-06 at 3.47.49 PM.png\u001b[m\n",
+      "\t\u001b[31mScreen Shot 2021-05-06 at 3.49.12 PM.png\u001b[m\n",
+      "\t\u001b[31mScreen Shot 2021-05-06 at 3.49.39 PM.png\u001b[m\n",
+      "\t\u001b[31mScreen Shot 2021-05-06 at 3.49.58 PM.png\u001b[m\n",
+      "\t\u001b[31mhclustFig.png\u001b[m\n",
+      "\t\u001b[31mhclustk5.png\u001b[m\n",
+      "\t\u001b[31mkmeans0.png\u001b[m\n",
+      "\t\u001b[31mkmeans1.png\u001b[m\n",
+      "\t\u001b[31mkmeans2.png\u001b[m\n",
+      "\t\u001b[31mkmeans3.png\u001b[m\n",
+      "\t\u001b[31mkmeans4.png\u001b[m\n",
+      "\t\u001b[31mkmeansElbow.png\u001b[m\n",
+      "\t\u001b[31mkmeansk5.png\u001b[m\n",
+      "\t\u001b[31mnodesDifference.png\u001b[m\n",
+      "\t\u001b[31mnodesFeature_0.png\u001b[m\n",
+      "\t\u001b[31mnodesFeature_1.png\u001b[m\n",
+      "\t\u001b[31mnodesFeature_2.png\u001b[m\n",
+      "\t\u001b[31mnodesFeature_3.png\u001b[m\n",
+      "\t\u001b[31mnodesFeature_4.png\u001b[m\n",
+      "\t\u001b[31mnodesFeature_5.png\u001b[m\n",
+      "\n",
+      "nothing added to commit but untracked files present (use \"git add\" to track)\n"
      ]
     }
    ],
@@ -1217,7 +1217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
